--- a/topic/hoc-hanh.html
+++ b/topic/hoc-hanh.html
@@ -2,12 +2,12 @@
       <link rel="icon" href="https://media.coolmate.me/uploads/October2021/meme-cheems-25.jpg" />
   <head>
     <title>Topic - Học hành</title>
-    <link type="text/css" rel="stylesheet" href="https://7a3.glitch.me/topic/hoc-hanh-style.css"
+    <link type="text/css" rel="stylesheet" href="https://minhpro1310.github.io/7a3/hoc-hanh-style.css"
   </head>
   <body>
     <ul>
 <li><a href="https://7a3.glitch.me">Trang chủ</a></li>
-  <li><a href="https://7a3.glitch.me/topic/hoc-hanh.html">Học hành</a></li>
+  <li><a href="https://minhpro1310.github.io/7a3/topic/hoc-hanh.html">Học hành</a></li>
   <li><a href="https://7a3.glitch.me/cms.html">Giải trí</a></li>
   <li><a href="https://7a3.glitch.me/cms.html">Tin tức</a></li>
   <li><a href="https://7a3.glitch.me/cms.html">Bảng điểm tuần</a></li>
