--- a/topic/hoc-hanh.html
+++ b/topic/hoc-hanh.html
@@ -2,7 +2,7 @@
       <link rel="icon" href="https://media.coolmate.me/uploads/October2021/meme-cheems-25.jpg" />
   <head>
     <title>Topic - Học hành</title>
-    <link type="text/css" rel="stylesheet" href="https://minhpro1310.github.io/7a3/hoc-hanh-style.css"
+    <link type="text/css" rel="stylesheet" href="https://minhpro1310.github.io/7a3/topic/hoc-hanh-style.css"
   </head>
   <body>
     <ul>
