--- a/topic/hoc-hanh.html
+++ b/topic/hoc-hanh.html
@@ -22,7 +22,7 @@
         Gặp lỗi? Hãy liên hệ với chúng tôi qua support.minhdzvn@gmail.com
       </p>
       <p>
-      © 2021 Minh Dz VN - Versions 1.1 BETA build 1246
+      © 2021 Minh Dz VN - Versions 1.1 BETA build 1246 - Bạn đang truy cập server 2 (Github)
       </p>
   </body>
 </html>
