--- a/topic/hoc-hanh.html
+++ b/topic/hoc-hanh.html
@@ -8,10 +8,10 @@
     <ul>
 <li><a href="https://7a3.glitch.me">Trang chủ</a></li>
   <li><a href="https://minhpro1310.github.io/7a3/topic/hoc-hanh.html">Học hành</a></li>
-  <li><a href="https://7a3.glitch.me/cms.html">Giải trí</a></li>
-  <li><a href="https://7a3.glitch.me/cms.html">Tin tức</a></li>
-  <li><a href="https://7a3.glitch.me/cms.html">Bảng điểm tuần</a></li>
-  <li><a href="https://7a3.glitch.me/topic/bugs-report.html">Báo cáo lỗi</a></li>
+  <li><a href="https://minhpro1310.github.io/7a3cms.html">Giải trí</a></li>
+  <li><a href="https://minhpro1310.github.io/7a3/cms.html">Tin tức</a></li>
+  <li><a href="https://minhpro1310.github.io/7a3/cms.html">Bảng điểm tuần</a></li>
+  <li><a href="https://minhpro1310.github.io/7a3/topic/bugs-report.html">Báo cáo lỗi</a></li>
     <li style="float:right"><a class="active" href="https://7a3.glitch.me/admin.html">Lấy quyền ADMIN</a></li>
     </ul>
    <h1>
