--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       Đây là dòng code dùng để tạo ra thanh điều hướng bên trên
     -->
     <ul>
-  <li><a href="https://7a3.glitch.me">Trang chủ</a></li>
-  <li><a href="https://7a3.glitch.me/topic/hoc-hanh.html">Học hành</a></li>
-  <li><a href="https://7a3.glitch.me/cms.html">Giải trí</a></li>
-  <li><a href="https://7a3.glitch.me/cms.html">Tin tức</a></li>
-  <li><a href="https://7a3.glitch.me/cms.html">Bảng điểm tuần</a></li>
-  <li><a href="https://7a3.glitch.me/topic/bugs-report.html">Báo cáo lỗi</a></li>
+  <li><a href="https://minhpro1310.github.io/7a3">Trang chủ</a></li>
+  <li><a href="https://minhpro1310.github.io/7a3/topic/hoc-hanh.html">Học hành</a></li>
+  <li><a href="https://minhpro1310.github.io/7a3/cms.html">Giải trí</a></li>
+  <li><a href="https://minhpro1310.github.io/7a3/cms.html">Tin tức</a></li>
+  <li><a href="https://minhpro1310.github.io/7a3/cms.html">Bảng điểm tuần</a></li>
+  <li><a href="hhttps://minhpro1310.github.io/7a3/topic/bugs-report.html">Báo cáo lỗi</a></li>
 </ul>
 
     <!--
@@ -54,7 +54,7 @@
         Gặp lỗi? Hãy liên hệ với chúng tôi qua support.minhdzvn@gmail.com
       </p>
       <p>
-      © 2021 Minh Dz VN - Versions 1.1 BETA build 1246
+      © 2021 Minh Dz VN - Versions 1.1 BETA build 1246 - Bạn đang truy cập server 2 (GitHub)
       </p>
     </footer>
   </body>
