--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <li><a href="https://minhpro1310.github.io/7a3/cms.html">Giải trí</a></li>
   <li><a href="https://minhpro1310.github.io/7a3/cms.html">Tin tức</a></li>
   <li><a href="https://minhpro1310.github.io/7a3/cms.html">Bảng điểm tuần</a></li>
-  <li><a href="hhttps://minhpro1310.github.io/7a3/topic/bugs-report.html">Báo cáo lỗi</a></li>
+  <li><a href="https://minhpro1310.github.io/7a3/topic/bugs-report.html">Báo cáo lỗi</a></li>
 </ul>
 
     <!--
