--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
       </p>
       <p>
       © 2021 Minh Dz VN - Versions 1.1 BETA build 1246 - Bạn đang truy cập server 2 (GitHub)
+        <br>
+        Thông tin bản quyền: Bấm vào 
+        <a href="https://minhpro1310.github.io/7a3/LICENSE.txt" target="_blank" rel="noopener"/>
+        <strong>đây</strong>
       </p>
     </footer>
   </body>
