--- a/topic/hoc-hanh.html
+++ b/topic/hoc-hanh.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <ul>
-<li><a href="https://7a3.glitch.me">Trang chủ</a></li>
+<li><a href="https://minhpro1310.github.io/7a3">Trang chủ</a></li>
   <li><a href="https://minhpro1310.github.io/7a3/topic/hoc-hanh.html">Học hành</a></li>
   <li><a href="https://minhpro1310.github.io/7a3cms.html">Giải trí</a></li>
   <li><a href="https://minhpro1310.github.io/7a3/cms.html">Tin tức</a></li>
