--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       This is an HTML comment
       You can write text in a comment and the content won't be visible in the page
     -->
-<title>7A3 Never Die</title>
+<title>Trangg Chủ</title>
     
     <script>
       console.log("getting data from https://7a3.glitch.me/style.css")
