--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       Đây là dòng code dùng để tạo ra thanh điều hướng bên trên
     -->
     <ul>
-  <li><a href="https://minhpro1310.github.io/trang-chu">Trang chủ</a></li>
-  <li><a href="https://minhpro1310.github.io/trang-chu/topic/hoc-hanh.html">Học hành</a></li>
-  <li><a href="https://minhpro1310.github.io/trang-chu/cms.html">Giải trí</a></li>
-  <li><a href="https://minhpro1310.github.io/trang-chu/cms.html">Tin tức</a></li>
-  <li><a href="https://minhpro1310.github.io/trang-chu/cms.html">Bảng điểm tuần</a></li>
-  <li><a href="https://minhpro1310.github.io/trang-chu/topic/bugs-report.html">Báo cáo lỗi</a></li>
+  <li><a href="https://https://minhdzvietnam.tk/">Trang chủ</a></li>
+  <li><a href="https://https://minhdzvietnam.tk/topic/hoc-hanh.html">Học hành</a></li>
+  <li><a href="https://https://minhdzvietnam.t//cms.html">Giải trí</a></li>
+  <li><a href="https://https://minhdzvietnam.tk/cms.html">Tin tức</a></li>
+  <li><a href="https://https://minhdzvietnam.tk/cms.html">Bảng điểm tuần</a></li>
+  <li><a href="https://https://minhdzvietnam.tk/topic/bugs-report.html">Báo cáo lỗi</a></li>
 </ul>
 
     <!--
