--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     -->
     <ul>
   <li><a href="https://https://minhdzvietnam.tk/">Trang chủ</a></li>
-  <li><a href="https://https://minhdzvietnam.tk/topic/hoc-hanh.html">Coming Soon</a></li>
+  <li><a href="https://https://minhdzvietnam.tk/cms.html">Coming Soon</a></li>
   <li><a href="https://https://minhdzvietnam.t//cms.html">Giải trí</a></li>
   <li><a href="https://https://minhdzvietnam.tk/cms.html">Tin tức</a></li>
   <li><a href="https://https://minhdzvietnam.tk/cms.html">Coming Soon</a></li>
