--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://media.coolmate.me/uploads/October2021/meme-cheems-25.jpg" />
-    <link type="text/css" rel="stylesheet" href="style.css"
+    <link type="text/css" rel="stylesheet" href="style.css"/>
 
     <!-- 
       This is an HTML comment
