--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
       Đây là dòng code dùng để tạo ra thanh điều hướng bên trên
     -->
     <ul>
-  <li><a href="https://https://minhdzvietnam.tk/">Trang chủ</a></li>
-  <li><a href="https://https://minhdzvietnam.tk/cms.html">Coming Soon</a></li>
-  <li><a href="https://https://minhdzvietnam.t//cms.html">Giải trí</a></li>
-  <li><a href="https://https://minhdzvietnam.tk/cms.html">Tin tức</a></li>
-  <li><a href="https://https://minhdzvietnam.tk/cms.html">Coming Soon</a></li>
-  <li><a href="https://https://minhdzvietnam.tk/topic/bugs-report.html">Báo cáo lỗi</a></li>
+  <li><a href="https://minhdzvietnam.tk/">Trang chủ</a></li>
+  <li><a href="https://minhdzvietnam.tk/cms.html">Coming Soon</a></li>
+  <li><a href="https://minhdzvietnam.t//cms.html">Giải trí</a></li>
+  <li><a href="https://minhdzvietnam.tk/cms.html">Tin tức</a></li>
+  <li><a href="https://minhdzvietnam.tk/cms.html">Coming Soon</a></li>
+  <li><a href="https://minhdzvietnam.tk/topic/buon-loli.html">Buôn LOLI</a></li>
+  <li><a href="https://minhdzvietnam.tk/topic/bugs-report.html">Báo cáo lỗi</a></li>
 </ul>
 
     <!--
