--- a/topics/buon-loli.html
+++ b/topics/buon-loli.html
@@ -8,6 +8,18 @@
     <script src="minhdzvietnam.tk/js/buon-loli.js" refer</script>
   </head>
   <body>
+  
+      <ul>
+  <li><a href="https://minhdzvietnam.tk/">Trang chủ</a></li>
+  <li><a href="https://minhdzvietnam.tk/cms.html">Coming Soon</a></li>
+  <li><a href="https://minhdzvietnam.t//cms.html">Giải trí</a></li>
+  <li><a href="https://minhdzvietnam.tk/cms.html">Tin tức</a></li>
+  <li><a href="https://minhdzvietnam.tk/cms.html">Coming Soon</a></li>
+  <li><a href="https://minhdzvietnam.tk/topic/buon-loli.html">Buôn LOLI</a></li>
+  <li><a href="https://minhdzvietnam.tk/topic/bugs-report.html">Báo cáo lỗi</a></li>
+</ul>
+
+  
   <h1>
   Bán LOLI giá rẻ
   </h1>
