--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   <li><a href="https://minhdzvietnam.t//cms.html">Giải trí</a></li>
   <li><a href="https://minhdzvietnam.tk/cms.html">Tin tức</a></li>
   <li><a href="https://minhdzvietnam.tk/cms.html">Coming Soon</a></li>
-  <li><a href="https://minhdzvietnam.tk/topic/buon-loli.html">Buôn LOLI</a></li>
-  <li><a href="https://minhdzvietnam.tk/topic/bugs-report.html">Báo cáo lỗi</a></li>
+  <li><a href="https://minhdzvietnam.tk/topics/buon-loli.html">Buôn LOLI</a></li>
+  <li><a href="https://minhdzvietnam.tk/topics/bugs-report.html">Báo cáo lỗi</a></li>
 </ul>
 
     <!--
