--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <ul>
   <li><a href="https://minhdzvietnam.tk/">Trang chủ</a></li>
   <li><a href="https://minhdzvietnam.tk/cms.html">Coming Soon</a></li>
-  <li><a href="https://minhdzvietnam.t//cms.html">Giải trí</a></li>
+  <li><a href="https://minhdzvietnam.tk//cms.html">Giải trí</a></li>
   <li><a href="https://minhdzvietnam.tk/cms.html">Tin tức</a></li>
   <li><a href="https://minhdzvietnam.tk/cms.html">Coming Soon</a></li>
   <li><a href="https://minhdzvietnam.tk/topics/buon-loli.html">Buôn LOLI</a></li>
