--- a/download-center.html
+++ b/download-center.html
@@ -9,7 +9,7 @@
     <h1>
       Minhdzvietnam Download Center
     </h1>
-    <li><a href="minhdzvietnam.tk/upload/cpu-z_1.98-en.exe"</li>
+    <li><a href="minhdzvietnam.tk/upload/cpu-z_1.98-en.exe">CPU-Z</a></li>
       <style>
         body{
         text-align: center;
