--- a/download-center.html
+++ b/download-center.html
@@ -20,6 +20,7 @@
           width: 100px;
           height: 200px;
           transition: 200ms;
+          background-color: grey;
         }
         li a:hover{
           width: 150px;
