--- a/download-center.html
+++ b/download-center.html
@@ -10,7 +10,7 @@
       Minhdzvietnam Download Center
     </h1>
     <ul>
-    <li><a href="minhdzvietnam.tk/upload/cpu-z_1.98-en.exe" target="__blank" rel="noopener"></a><strong>CPU-Z</strong></li>
+    <li><a href="minhdzvietnam.tk/upload/cpu-z_1.98-en.exe" target="__blank" rel="noopener"<strong>CPU-Z</strong></a></li>
     </ul>
       <style>
         body{
