--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
     <h1>
       Trang Chủ
     </h1>
-    <h2>
-      Hiện tại chưa có bài viết nào
-    </h2>
+    <p>
+      Thiệp đẹp nhất trường:
+    </p>
+    
+    <img src="minhdzvietnam.tk/upload/minh-xong.png" width="200px" height="400px"/>
 
     <footer>
       <p>
