--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       Thiệp đẹp nhất trường:
     </p>
     
-    <img src="minhdzvietnam.tk/upload/minh-xong.png" width="200px" height="400px"/>
+    <img src="https://minhdzvietnam.tk/upload/minh-xong.png" width="819px" height="484px"/>
 
     <footer>
       <p>
