--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <li><a href="https://minhdzvietnam.tk/cms.html">Tin tức</a></li>
   <li><a href="https://minhdzvietnam.tk/cms.html">Coming Soon</a></li>
   <li><a href="https://minhdzvietnam.tk/topics/bugs-report.html">Báo cáo lỗi</a></li>
+      <li id="float-right"><a href="https://minhdzvietnam.tk/certification/1.html">TOP SECRECT</a></li>
 </ul>
 
     <!--
