--- a/certification/1.html
+++ b/certification/1.html
@@ -17,7 +17,7 @@
 
             //Pass đúng          
             if (pass == "minhwadepzai"){
-                document.write("<p><a href="hentaiz.vip" target="_blank" rel="noopener">minhdzvietnam.tk (bấm vào thử đi :) )</a></p>");
+                document.write("<p>https://hentaiz.vip</p>");
                 console.log("password correct");
             }
         
