--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
     <h1>
       Trang Chủ
     </h1>
+
     <p>
-      Thiệp đẹp nhất trường:
+      Hiện tại chưa có bài viết
     </p>
-    
-    <img src="https://minhdzvietnam.tk/upload/minh-xong.png" width="819px" height="484px"/>
 
     <footer>
       <p>
