--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <a href="https://minhpro1310.github.io/7a3/LICENSE.txt" target="_blank" rel="noopener"/>
         <strong>đây</strong>
       </p>
+      <a href="//www.dmca.com/Protection/Status.aspx?ID=858db71e-9dda-4af7-b136-1d21e06a60c3" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=858db71e-9dda-4af7-b136-1d21e06a60c3"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
     </footer>
   </body>
   <style>
