--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
     </p>
 
     <footer>
+      <h1>
+        Sắp có một bản update lớn, nhớ đón chờ nhé
+      </h1>
       <p>
         Gặp lỗi? Hãy liên hệ với chúng tôi qua support.minhdzvn@gmail.com
       </p>
