--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
   <li><a href="https://minhdzvietnam.tk/cms.html">Coming Soon</a></li>
   <li><a href="https://minhdzvietnam.tk/topics/bugs-report.html">Báo cáo lỗi</a></li>
       <li id="float-right"><a href="https://minhdzvietnam.tk/certification/1.html">TOP SECRECT</a></li>
+      <li class="float--right"><a href="https://beta.minhh.gq" target="_blank" rel="noopener">Tham gia Beta</a></li>
 </ul>
+    
+    <style>
+      li.float--right{
+        float: right;
+      }
+    </style>
 
     <!--
       Tiêu đề của trang là Trang Chủ
