--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
         float: right;
         background-color: black;
       }
+      
+      li.float--right:hover{
+        background-color: none;
+      }
     </style>
 
     <!--
